--- a/Underground.css
+++ b/Underground.css
@@ -286,6 +286,12 @@ main {
     max-width: 100%;
 }
 
+.spread-large video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .spreads-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
